--- a/veil.tex
+++ b/veil.tex
@@ -327,7 +327,7 @@ library, but the Veil compiler analyzes both
 first party and third party content during compilation
 (\S\ref{sec:compiler}). Veil also assumes
 that blinding servers do not maliciously 
-modify content given to them by the web developers.
+modify content uploaded by the web developers.
 
 Heap walking (\S\ref{sec:heapWalk}) allows Veil
 to prevent sensitive RAM artifacts from swapping to
