--- a/thesis.tex
+++ b/thesis.tex
@@ -214,7 +214,7 @@
 
 \def\UrlFont{\codefont}
 
-\RecustomVerbatimEnvironment{Verbatim}{Verbatim}{formatcom=\footnotesize}
+\RecustomVerbatimEnvironment{Verbatim}{Verbatim}{formatcom=\normalsize}
 
 
 \input{cmds}
