--- a/concl.tex
+++ b/concl.tex
@@ -32,7 +32,7 @@ are there ways to perform MPC practically on more complex computations, such as 
 
 With the increased number of data and privacy breaches, users are becoming
 more aware of the "cost" of using web services, i.e. providing these services
-with data. Moreover, regulations like
+with their data. Moreover, regulations like
 GDPR are levying heavy penalties on organizations that do not build
 secure mechanisms that protect user data. As a result, we will see
 an increase both in users and web services that want more data protections.
