starts some acks

--- a/acks.tex
+++ b/acks.tex
@@ -1,6 +1,29 @@
 \chapter*{Acknowledgments}
 
-More acknowledgments here.
+I have many people to thank in this dissertation. It's been a long journey,
+but I've met and learned from so many awesome people along the way. It goes without
+saying that this dissertation was the result of work and mentorship from many people.
+
+First and foremost,
+I want to thank my advisors, Nickolai Zeldovich and James Mickens. I've learned so much
+from the both of them along the way. I want to thank them for providing me
+the independence and support to work on ideas that I thought were interesting.
+
+Next, I want to thank my collaborators, Vinod Vaikuntanathan, Shafi Goldwasser,
+Matei Zaharia, and Catherine Yun. I also want to thank my research family at MIT,
+specifically Jen Gong, Amy Zhao, Amy Ousterhout, Tej Chajed, Guha Balakrishnan,
+Jon Gjenset, David Lazar, Taesoo Kim, Xi Wang, Haogong Chen, Neha Narula, Ravi Netravali, Silas Boyd-Wickizer,
+Jean Yang, and everyone else in the PDOS group. I've learned a lot from you, and you
+made my time at MIT very enjoyable.
+
+I want to thank my friends who have provided me great advice and support along the way.
+I want to thank everyone I met at Rough Draft Ventures, all the mentors at
+Highland Capital and Cybersecurity Factory, and my friends in Sidney Pacific. Your
+friendship has allowed me to stay grounded during my PhD. 
+
+Finally, I want to thank my parents for allowing me to live on a different
+coast for the past six years. They have always been supportive of my life choices
+and adventures.
 
 \asterism
 
