--- a/concl.tex
+++ b/concl.tex
@@ -12,9 +12,8 @@ to minimize data leakage when a user accesses a web service.
 %queries in a more practical manner by 
 %leveraging a recent cryptographic primitive,
 %function secret sharing (FSS). 
-These systems have raised new interesting questions,
-especially regarding the practicality of 
-systems for secure multi-party computation and private queries.
+These systems have raised interesting questions
+regarding the practicality of privacy-preserving systems.
 
 Veil is the first platform to allow developers to provide stronger
 private browsing semantics directly to users. A few other key questions remain.
