--- a/concl.tex
+++ b/concl.tex
@@ -16,7 +16,7 @@ These systems have raised interesting questions
 regarding the practicality of privacy-preserving systems.
 
 Veil is the first platform to allow developers to provide stronger
-private browsing semantics directly to users. A few other key questions remain.
+private browsing semantics directly to users. A few key questions remain.
 How do we handle more complex content like videos? Right now, we assume
 that developers create a pool of blinding servers. However, content delivery
 networks and proxies are becoming more prevalent. How do we leverage this
