--- a/concl.tex
+++ b/concl.tex
@@ -17,7 +17,7 @@ regarding the practicality of privacy-preserving systems.
 
 Veil is the first platform to allow developers to provide stronger
 private browsing semantics directly to users. A few key questions remain.
-How do we handle more complex content like videos? Right now, we assume
+How do we handle more complex content like videos? In current version of Veil, we assume
 that developers create a pool of blinding servers. However, content delivery
 networks and proxies are becoming more prevalent. How do we leverage this
 existing infrastructure to make Veil more usable? Is it easy to turn
