--- a/splinter.tex
+++ b/splinter.tex
@@ -1359,7 +1359,7 @@ FSS can perform many of the complex queries in Olumofin et al.
 without additional protocols, such as COUNT and SUM 
 with non-index predicates.
 
-We implemented the logic in Olumofin et al., ported our
+We implemented the private query protocol in Olumofin et al., ported our
 case queries, and ran them on the same Amazon AWS setup as Splinter
 (described at the beginning of this section).
 We compare the two-party version of Splinter with Olumofin et al.
