fix to abstract and title page

--- a/abstract.tex
+++ b/abstract.tex
@@ -18,7 +18,7 @@ This dissertation presents two practical,
 secure systems, Veil and Splinter, that
 prevent some of this data leakage. Veil minimizes
 client-side information leakage from the browser by allowing
-web page developers to enforce stronger private browsing 
+web application developers to enforce stronger private browsing 
 semantics without browser support. Splinter 
 allows the server to properly respond to a user
 query without the server learning any sensitive
