--- a/title.tex
+++ b/title.tex
@@ -10,8 +10,8 @@
 \degreemonth{September}
 \degreeyear{2018}
 \thesisdate{\today}
-\supervisor{Nickolai Zeldovich}{Professor}
-\supervisor{James Mickens}{Associate Professor}
+\supervisor{Nickolai Zeldovich}{Professor of Electrical Engineering and Computer Science}
+\supervisor{James Mickens}{Associate Professor of Computer Science at Harvard University}
 \chairman{Leslie A. Kolodziejski}{Professor of Electrical Engineering and Computer Science \\ 
 	Chair, Department Committee on Graduate Students}
 \maketitle
