--- a/veil.tex
+++ b/veil.tex
@@ -138,7 +138,8 @@ the browser's address bar.
 % Blinded references also protect against more subtle data
 % exfiltrations, like the use of CSS styles to detect which
 % resources a browser has previously downloaded~\cite{cssHistoryAttack,cssHistoryAttack2}.
-Encryption allows a Veil page to safely leverage the
+Encryption allows a Veil-enabled page, which we will simply
+refer to as a Veil page, to safely leverage the
 browser cache to reduce page load times, or store user data
 across different sessions of the private web page. A page
 that desires the highest level of security will eschew even
