fixes bib error

--- a/p.bib
+++ b/p.bib
@@ -31,7 +31,7 @@
 }
 
 @Misc{mobile-delays,
-  author = {"O'Reilley},
+  author = {O'Reilley},
   title = {{Optimizing for Mobile Networks}},
   note = {\url{https://hpbn.co/optimizing-for-mobile-networks/}}
 }
