makes edits to veil chapter based on nickolais comments

--- a/p.bib
+++ b/p.bib
@@ -3,6 +3,29 @@
   note = {\url{https://aws.amazon.com/blogs/aws/category/price-reduction/}}
 }
 
+@Misc{amazon-silk,
+  author = {Amazon},
+  note = {\url{https://docs.aws.amazon.com/silk/latest/developerguide/split-arch.html}}
+}
+
+@inproceedings{rc2,
+	title={Remote-Control Caching: Proxy-based URL Rewriting to Decrease Mobile Browsing Bandwidth},
+	author={Netravali, Ravi and Mickens, James},
+	booktitle={Proceedings of the 19th International Workshop on Mobile Computing Systems \& Applications},
+	pages={63--68},
+	year={2018},
+	organization={ACM}
+}
+
+@inproceedings{parcel,
+	title={{PARCEL: Proxy assisted browsing in cellular networks for energy and latency reduction}},
+	author={Sivakumar, Ashiwan and Puzhavakath Narayanan, Shankaranarayanan and Gopalakrishnan, Vijay and Lee, Seungjoon and Rao, Sanjay and Sen, Subhabrata},
+	booktitle={Proceedings of the 10th ACM International on Conference on emerging Networking Experiments and Technologies},
+	pages={325--336},
+	year={2014},
+	organization={ACM}
+}
+
 @inproceedings{polaris,
   title={Polaris: Faster Page Loads Using Fine-grained Dependency Tracking.},
   author={Netravali, Ravi and Goyal, Ameesh and Mickens, James and Balakrishnan, Hari},
